--- a/index.htm
+++ b/index.htm
@@ -168,7 +168,7 @@
         <section class="flex justify-center">
             <div class="pt-[130px] pb-[130px] custom-padding max-w-[800px]">
                 <h1
-                    class="text-[47px] max-md:text-[42px] my-4 max-md:leading-[50px] max-sm:text-[30px] max-sm:leading-[30px] leading-[70px] text-center font-[500] text-gray-700 flex items-center justify-center flex-wrap">
+                    class="text-[47px] max-md:text-[42px] my-4 max-sm:leading-[60px] max-md:leading-[50px] max-sm:text-[30px] leading-[70px] text-center font-[500] text-gray-700 flex items-center justify-center flex-wrap">
                     Biznesinizi bizimlə rəqəmsal dünyada
                     <span class="relative inline-flex px-2 items-center">
                         <img src="img/easier.svg" alt="easier"
