--- a/index.htm
+++ b/index.htm
@@ -295,10 +295,10 @@
                     əmin olun. <span class="font-bold">Ətraflı oxu...</span></p>
             </div>
 
-            <form class="flex items-center bg-white mt-6 justify-center pt-3">
-                <input placeholder="İstədiyiniz domen adını daxil edin" type="text" class="p-3 rounded-tl-[10px] rounded-bl-[10px] border border-r-0 w-full outline-none 
-                           max-w-[450px] max-lg:w-[400px] max-md:w-[350px] max-sm:w-[300px] max-xs:w-[50px]" />
-                <select id="domens" class="py-[14px] bg-white text-[#999] outline-none border border-l-0"></select>
+            <form class="flex w-[100%] items-center mt-6 justify-between bg-white">
+                <input placeholder="İstədiyiniz domen adını daxil edin" type="text"  class="p-3 w-full outline-none 
+                           max-w-[450px] max-lg:w-[400px] max-md:w-[350px] max-sm:w-[300px] max-xs:w-[150px]" />
+                <select id="domens" class="py-[14px] bg-white text-[#999] outline-none"></select>
                 <button class="bg-[#A271F2] px-8 py-[13.5px] rounded-[4px] text-white font-[400] 
                                hover:bg-[#864ae8]">Axtar</button>
             </form>
