--- a/index.htm
+++ b/index.htm
@@ -283,7 +283,7 @@
             </div>
         </section>
 
-        <section class="min-h-[560px] bg-[#fef6ffce] max-w-full">
+        <section class="px-3 min-h-[560px] bg-[#fef6ffce] max-w-full">
             <div class="flex items-center justify-center">
                 <h2 class="pt-24 text-[#300B60] text-[30px] font-[500]">Domen Adını Axtarın</h2>
             </div>
@@ -295,9 +295,9 @@
                     əmin olun. <span class="font-bold">Ətraflı oxu...</span></p>
             </div>
 
-            <form class="flex w-[100%] items-center mt-6 justify-between bg-white">
+            <form class="flex max-w-[650px] mx-auto items-center rounded-md mt-6 justify-between bg-white">
                 <input placeholder="İstədiyiniz domen adını daxil edin" type="text"  class="p-3 w-full outline-none 
-                           max-w-[450px] max-lg:w-[400px] max-md:w-[300px] max-sm:w-[200px] max-xs:w-[90px]" />
+                           max-w-[450px]" />
                 <select id="domens" class="py-[14px] bg-white text-[#999] outline-none"></select>
                 <button class="bg-[#A271F2] px-8 py-[13.5px] rounded-[4px] text-white font-[400] 
                                hover:bg-[#864ae8]">Axtar</button>
